Prepare for deployment